@@ -2,7 +2,7 @@
 # vi:si:et:sw=4:sts=4:ts=4
 #
 # Flumotion - a streaming media server
-# Copyright (C) 2004,2005,2006,2007 Fluendo, S.L. (www.fluendo.com).
+# Copyright (C) 2004,2005,2006,2007,2008 Fluendo, S.L. (www.fluendo.com).
 # All rights reserved.
 
 # This file may be distributed and/or modified under the terms of
@@ -32,6 +32,7 @@ from flumotion.worker.checks.gst010 import do_element_check
 
 __version__ = "$Rev: 6883 $"
 
+
 def getListOfAdaptersWithTypes():
     """
     Probe the system to find adapters and types.
@@ -41,8 +42,9 @@ def getListOfAdaptersWithTypes():
     @rtype: L{twisted.internet.defer.Deferred}
     """
     result = messages.Result()
+
     def get_type_of_adapter(adapter):
-        dvbelement = gst.element_factory_make ("dvbsrc", "test_dvbsrc")
+        dvbelement = gst.element_factory_make("dvbsrc", "test_dvbsrc")
         dvbelement.set_property("adapter", adapter)
         pipeline = gst.Pipeline("")
         pipeline.add(dvbelement)
@@ -61,13 +63,14 @@ def getListOfAdaptersWithTypes():
         return adaptertype
     # FIXME: use hal instead
     adapterlist = []
-    for i in range (0,8):
+    for i in range(0, 8):
         if os.path.exists('/dev/dvb/adapter%d/frontend0' % i):
             adaptertype = get_type_of_adapter(i)
             adapterlist.append((adaptertype, i, "DVB (%s) Adapter %d" % (
-                    adaptertype,i)))
+                    adaptertype, i)))
     result.succeed(adapterlist)
     return result
+
 
 def getTerrestrialLocations():
     """
@@ -80,21 +83,41 @@ def getTerrestrialLocations():
     # FIXME: allow translation
     # countries not taken from iso xml file because the country codes used
     #
-    countries = { "at": "Austria", "au": "Australia", "be": "Belgium",
-        "ch": "Switzerland", "cz": "Czech Republic", "de": "Germany",
-        "dk": "Denmark", "es": "Spain", "fi": "Finland", "fr": "France",
-        "gr": "Greece", "hr": "Hungary", "is": "Iceland", "it": "Italy",
-        "lu": "Luxemburg", "nl": "Netherlands", "nz": "New Zealand",
-        "pl": "Poland", "se": "Sweden", "sk": "Slovakia", "tw": "Taiwan",
-        "uk": "United Kingdom" }
+    countries = {"at": "Austria",
+                 "au": "Australia",
+                 "be": "Belgium",
+                 "ch": "Switzerland",
+                 "cz": "Czech Republic",
+                 "de": "Germany",
+                 "dk": "Denmark",
+                 "es": "Spain",
+                 "fi": "Finland",
+                 "fr": "France",
+                 "gr": "Greece",
+                 "hr": "Hungary",
+                 "is": "Iceland",
+                 "it": "Italy",
+                 "lu": "Luxemburg",
+                 "nl": "Netherlands",
+                 "nz": "New Zealand",
+                 "pl": "Poland",
+                 "se": "Sweden",
+                 "sk": "Slovakia",
+                 "tw": "Taiwan",
+                 "uk": "United Kingdom",
+                 }
 
     def splitLocation(location):
         return string.split(location, "-", maxsplit=1)
+
     def camelCaseToTitleCase(location):
         # antennae are listed as eg CrystalPalace not Crystal Palace
         # so convert
-        # there has to be a decent regex to convert upper camel case to 
+        # there has to be a decent regex to convert upper camel case to
         # title case
+        # We also have atannaes separated by - or _
+        location = location.replace('-', '')
+        location = location.replace('_', '')
         newlocation = location[0]
         for l in location[1:]:
             if l.isupper():
@@ -105,8 +128,9 @@ def getTerrestrialLocations():
 
     result = messages.Result()
     locations = {}
-    for path in ["/usr/share/dvb", "/usr/share/dvb-apps", 
-            "/usr/share/doc/dvb-utils/examples/scan"]:
+    for path in ["/usr/share/dvb",
+                 "/usr/share/dvb-apps",
+                 "/usr/share/doc/dvb-utils/examples/scan"]:
         if os.path.exists(path):
             for f in os.listdir(os.path.join(path, 'dvb-t')):
                 country = "Unknown"
@@ -117,14 +141,13 @@ def getTerrestrialLocations():
                     city = camelCaseToTitleCase(city)
                 except Exception, e:
                     city = f
-                if not locations.has_key(country):
-                    locations[country] = []
                 print "Adding country %s city %s" % (country, city)
-                locations[country].append(
+                locations.setdefault(country, []).append(
                     (city, os.path.join(path, 'dvb-t', f)))
 
     result.succeed(locations)
     return result
+
 
 def getInitialTuning(adapterType, initialTuningFile):
     """
@@ -133,48 +156,56 @@ def getInitialTuning(adapterType, initialTuningFile):
     """
     result = messages.Result()
     ret = []
-    if os.path.exists(initialTuningFile):
-        f = open(initialTuningFile, "r")
-        while True:
-            line = f.readline()
-            if not line:
-                break
-            if line[0] != '#':
-                params = line[:-1].split(" ")
-                if params[0] == "T" and adapterType == "DVB-T":
-                    if len(params) == 9:
-                        d = { "frequency":int(params[1]),
-                              "bandwidth":int(params[2][0]),
-                              "code-rate-hp":params[3],
-                              "code-rate-lp":params[4],
-                              "constellation":params[5],
-                              "transmission-mode":params[6],
-                              "guard-interval":int(params[7].split("/")[1]),
-                              "hierarchy":params[8]}
-                        ret.append(d)
-                    elif params[0] == "S" and adapterType == "DVB-S":
-                        if len(params) == 5:
-                            d = { "frequency":int(params[1]),
-                                  "symbol-rate":int(params[3])/1000,
-                                  "inner-fec":params[4] }
-                            if params[2] == "V":
-                                d["polarization"] = "vertical"
-                            else:
-                                d["polarization"] = "horizontal"
-                            ret.append(d)
-                    elif params[0] == "C" and adapterType == "DVB-C":
-                        if len(params) == 5:
-                            d = { "frequency":int(params[1]),
-                                  "symbol-rate":int(params[2])/1000,
-                                  "inner-fec":params[3],
-                                  "modulation":params[4] }
-                            ret.append(d)
-        f.close()
+    if not os.path.exists(initialTuningFile):
+        result.succeed(ret)
+        return result
+
+    for line in open(initialTuningFile, "r"):
+        if not line:
+            break
+        if line[0] == '#':
+            continue
+        params = line[:-1].split(" ")
+        if params[0] == "T" and adapterType == "DVB-T":
+            if len(params) != 9:
+                continue
+            d = {"frequency": int(params[1]),
+                 "bandwidth": int(params[2][0]),
+                 "code-rate-hp": params[3],
+                 "code-rate-lp": params[4],
+                 "constellation": params[5],
+                 "transmission-mode": params[6],
+                 "guard-interval": int(params[7].split("/")[1]),
+                 "hierarchy": params[8]}
+            ret.append(d)
+        elif params[0] == "S" and adapterType == "DVB-S":
+            if len(params) != 5:
+                continue
+            d = {"frequency": int(params[1]),
+                 "symbol-rate": int(params[3])/1000,
+                 "inner-fec": params[4],
+                 }
+            if params[2] == "V":
+                d["polarization"] = "vertical"
+            else:
+                d["polarization"] = "horizontal"
+            ret.append(d)
+        elif params[0] == "C" and adapterType == "DVB-C":
+            if len(params) != 5:
+                continue
+            d = {"frequency": int(params[1]),
+                 "symbol-rate": int(params[2])/1000,
+                 "inner-fec": params[3],
+                 "modulation": params[4],
+                 }
+            ret.append(d)
+
     result.succeed(ret)
     return result
 
 
 class DVBScanner:
+
     def __init__(self, adapter=0, frontend=0, scanning_complete_cb=None,
         channel_added_cb=None):
         self.adapter = adapter
@@ -193,9 +224,9 @@ class DVBScanner:
         self.scanning_complete_cb = scanning_complete_cb
         self.channel_added_cb = channel_added_cb
 
-        self.pipeline =  gst.parse_launch(
-            "dvbsrc name=dvbsrc adapter=%d frontend=%d pids=0:16:17:18 " \
-            "stats-reporting-interval=0 ! mpegtsparse ! " \
+        self.pipeline = gst.parse_launch(
+            "dvbsrc name=dvbsrc adapter=%d frontend=%d pids=0:16:17:18 "
+            "stats-reporting-interval=0 ! mpegtsparse ! "
             "fakesink silent=true" % (self.adapter, self.frontend))
         bus = self.pipeline.get_bus()
         bus.add_signal_watch()
@@ -217,7 +248,7 @@ class DVBScanner:
         # block until state change completed
         self.pipeline.get_state()
         self.scanned = False
-        
+
         self.scanning_complete_cb()
         return False
 
@@ -239,7 +270,7 @@ class DVBScanner:
                     gobject.source_remove(self.check_for_lock_event_id)
                     self.check_for_lock_event_id = None
                     self.wait_for_tables_event_id = gobject.timeout_add(
-                        10*1000, 
+                        10*1000,
                         self.wait_for_tables)
             elif message.structure.get_name() == 'dvb-read-failure':
                 if self.check_for_lock_event_id:
@@ -258,14 +289,16 @@ class DVBScanner:
                     for service in services:
                         name = service.get_name()
                         sid = int(name[8:])
-                        if service.has_key("name"):
+                        if "name" in service:
                             name = service["name"]
-                        if self.channels.has_key(sid):
+                        if sid in self.channels:
                             self.channels[sid]["name"] = name
                             self.channels[sid]["transport-stream-id"] = tsid
                         else:
-                            self.channels[sid] = { "name": name, \
-                                "transport-stream-id": tsid }
+                            self.channels[sid] = {
+                                "name": name,
+                                "transport-stream-id": tsid,
+                                }
                         if self.channel_added_cb:
                             self.channel_added_cb(sid, self.channels[sid])
                     self.sdt_arrived = True
@@ -274,32 +307,37 @@ class DVBScanner:
                 s = message.structure
                 name = s["network-id"]
                 actual = s["actual-network"]
-                if s.has_key("network-name"):
+                if "network-name" in s:
                     name = s["network-name"]
                 transports = s["transports"]
                 for transport in transports:
                     tsid = transport["transport-stream-id"]
-                    if transport.has_key("delivery"):
-                        delivery = transport["delivery"]
-                        self.transport_streams[tsid] = dict(delivery)
-                        if transport.has_key("channels"):
-                            chans = transport["channels"]
-                            for chan in chans:
-                                if self.channels.has_key(
-                                    chan["service-id"]):
-                                    self.channels[chan["service-id"]]["logical-channel-number"] = chan["logical-channel-number"]
-                                else:
-                                    self.channels[chan["service-id"]] = { "logical-channel-number" : chan["logical-channel-number"] }
+                    if not "delivery" in transport:
+                        continue
+                    delivery = transport["delivery"]
+                    self.transport_streams[tsid] = dict(delivery)
+                    if not "channels" in transport:
+                        continue
+                    chans = transport["channels"]
+                    for chan in chans:
+                        serviceId = chan["service-id"]
+                        chanKey = "logical-channel-number"
+                        logicalChannel = chan[chanKey]
+                        if chan["service-id"] in self.channels:
+                            self.channels[serviceId][chanKey] = logicalChannel
+                        else:
+                            self.channels[serviceId] = {
+                                chanKey: logicalChannel}
                 self.nit_arrived = True
             elif message.structure.get_name() == 'pat':
                 programs = message.structure["programs"]
                 for p in programs:
                     sid = p["program-number"]
                     pmt = p["pid"]
-                    if self.channels.has_key(sid):
+                    if sid in self.channels:
                         self.channels[sid]["pmt-pid"] = pmt
                     else:
-                        self.channels[sid] = { "pmt-pid":pmt }
+                        self.channels[sid] = {"pmt-pid": pmt}
                 self.pat_arrived = True
 
         if self.sdt_arrived and self.nit_arrived and self.pat_arrived:
@@ -311,7 +349,7 @@ class DVBScanner:
         self.sdt_arrived = False
         self.nit_arrived = False
         self.pat_arrived = False
-        
+
         if self.adaptertype == "DVB-T":
             modulation=""
             if tuning_params["constellation"].startswith("QAM"):
@@ -323,24 +361,24 @@ class DVBScanner:
             for param in ["code-rate-hp", "code-rate-lp"]:
                 if tuning_params[param] == "reserved":
                     tuning_params[param] = "NONE"
-            if tuning_params["hierarchy"] ==  0:
+            if tuning_params["hierarchy"] == 0:
                 tuning_params["hierarchy"] = "NONE"
             dvbsrc = self.pipeline.get_by_name("dvbsrc")
-            print "Frequency: %s" % (tuning_params["frequency"],)
+            print "Frequency: %s" % (tuning_params["frequency"], )
             dvbsrc.set_property("frequency", tuning_params["frequency"])
             dvbsrc.set_property("bandwidth", str(tuning_params["bandwidth"]))
             dvbsrc.set_property("code-rate-hp",
                 str(tuning_params["code-rate-hp"]))
-            dvbsrc.set_property("code-rate-lp", 
+            dvbsrc.set_property("code-rate-lp",
                 str(tuning_params["code-rate-lp"]))
-            dvbsrc.set_property("trans-mode", 
+            dvbsrc.set_property("trans-mode",
                 str(tuning_params["transmission-mode"]))
             dvbsrc.set_property("guard", str(tuning_params["guard-interval"]))
             dvbsrc.set_property("hierarchy", str(tuning_params["hierarchy"]))
             dvbsrc.set_property("modulation", modulation)
         elif self.adaptertype == "DVB-S":
-            if tuning_params["inner-fec"] == "reserved" or \
-               tuning_params["inner-fec"] == "none":
+            if (tuning_params["inner-fec"] == "reserved" or
+                tuning_params["inner-fec"] == "none"):
                 tuning_params["inner-fec"] = "NONE"
             dvbsrc = self.pipeline.get_by_name("dvbsrc")
             dvbsrc.set_property("frequency", tuning_params["frequency"])
@@ -348,8 +386,8 @@ class DVBScanner:
             dvbsrc.set_property("symbol-rate", tuning_params["symbol-rate"])
             dvbsrc.set_property("code-rate-hp", tuning_params["inner-fec"])
         elif self.adaptertype == "DVB-C":
-            if tuning_params["inner-fec"] == "reserved" or \
-               tuning_params["inner-fec"] == "none":
+            if (tuning_params["inner-fec"] == "reserved" or
+                tuning_params["inner-fec"] == "none"):
                 tuning_params["inner-fec"] = "NONE"
 
             dvbsrc = self.pipeline.get_by_name("dvbsrc")
@@ -365,31 +403,34 @@ class DVBScanner:
             else:
                 modulation = tuning_params["modulation"]
             dvbsrc.set_property("modulation", modulation)
-            
+
         self.pipeline.set_state(gst.STATE_PLAYING)
         (statereturn, state, pending) = self.pipeline.get_state()
         self.locked = False
         if statereturn == gst.STATE_CHANGE_FAILURE:
             self.check_for_lock()
         else:
-            # wait 10 seconds for lock 
-            self.check_for_lock_event_id = gobject.timeout_add(10*1000, 
+            # wait 10 seconds for lock
+            self.check_for_lock_event_id = gobject.timeout_add(10*1000,
                 self.check_for_lock)
+
 
 def scan(adapterNumber, dvbType, tuningInfo):
     d = defer.Deferred()
     scanner = None
+
     def scanningComplete():
         print "Scanning complete"
         result = messages.Result()
         result.succeed((scanner.channels, scanner.transport_streams))
         d.callback(result)
 
-    scanner = DVBScanner(adapter=adapterNumber, 
+    scanner = DVBScanner(adapter=adapterNumber,
         scanning_complete_cb=scanningComplete)
     scanner.adaptertype = dvbType
     scanner.scan(tuningInfo)
     return d
+
 
 def checkWebcam(device, id):
     """
@@ -406,6 +447,7 @@ def checkWebcam(device, id):
     """
     # FIXME: add code that checks permissions and ownership on errors,
     # so that we can offer helpful hints on what to do.
+
     def probeDevice(element):
         name = element.get_property('device-name')
         caps = element.get_pad("src").get_caps()
@@ -436,8 +478,11 @@ def checkWebcam(device, id):
             else:
                 # scalar
                 proc(struct, vals)
+
         def addRatesForWidth(struct, width):
+
             def addRatesForHeight(struct, height):
+
                 def addRate(struct, rate):
                     if (width, height) not in sizes:
                         sizes[(width, height)] = []
@@ -464,14 +509,14 @@ def checkWebcam(device, id):
                      version, minVersion)
             return defer.fail(NotImplementedError())
 
-        pipeline = 'v4l2src name=source device=%s ! fakesink' % (device,)
+        pipeline = 'v4l2src name=source device=%s ! fakesink' % (device, )
         d = do_element_check(pipeline, 'source', probeDevice,
                              state=gst.STATE_PAUSED, set_state_deferred=True)
         return d
 
     def tryV4L1(_):
         log.debug('webcam', 'trying v4l1')
-        pipeline = 'v4lsrc name=source device=%s ! fakesink' % (device,)
+        pipeline = 'v4lsrc name=source device=%s ! fakesink' % (device, )
         d = do_element_check(pipeline, 'source', probeDevice,
                              state=gst.STATE_PAUSED, set_state_deferred=True)
         return d
